manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis 
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
